--- a/css/style.css
+++ b/css/style.css
@@ -454,7 +454,7 @@ a{
 		opacity:1;
 	}
 }
-.technical-bars  .bar .progress-line{
+.technical-bars  .bar .progress-line progress{
 	position:relative;
 	margin-top:0.3rem;
 	width:70%;
@@ -462,14 +462,14 @@ a{
 	border-radius:10px;
 	background-color:black;
 }
-.technical-bars  .bar .progress-line progress{
+/* .technical-bars  .bar .progress-line progress{
 	position:absolute;
 	width:100%;
 	height:100%;
-	background-color:#000;
+	background-color:trans;
 	border:none;
 	border-radius:10px;
-}
+} */
 ::-moz-progress-bar { background: #03a9fc; }
 ::-webkit-progress-value { background-color: #03a9fc; }  /* #1bf1f0  chrome*/
 .technical-bars  .bar .progress-line{
