--- a/css/style.css
+++ b/css/style.css
@@ -1613,3 +1613,273 @@ footer{
 	z-index:100;
 }
 } 
+@media only screen and (max-width:325px){
+	*{
+		font-size:10px;
+	}
+	.navbar .menu{
+		position:fixed;
+		width:100%;
+		margin:-300px 2px 0 200px;
+		display:none;
+		transition:0.5;
+	}
+	.navbar .list{
+		display:block;
+		justify-content:center;
+		margin-bottom:1rem;
+	}
+	.navbar .list:hover,a:hover{
+		border:none;
+		color:#0a9ec0;
+		font-weight:400;
+	}
+	.navbar .icons{
+		display:none;
+	}
+	.navbar .fa-bars{
+		display:block;
+}
+	.navbar .fa-bars{
+		margin-left:100px;
+		font-size:1.5rem;
+		cursor:pointer;
+	}
+	.navbar #check:checked ~ .menu{
+		display:block;
+		margin-top:300px;
+		z-index:10;
+		background-color:var(--primary-color);
+		box-shadow:0 5px 10px rgba(0,0,0,0.5);
+	}
+	#Home .home-content{
+		width:100%;
+		padding:3rem 2rem;
+		margin:1.5rem 1rem;
+	}
+	.home-content h1{
+		font-size:1.5rem;
+	}
+	#Span{
+		font-size:3.7rem;
+	}
+	.home-content p{
+		font-size:1rem;
+	}
+	.home-soci a i{
+		font-size:1.3rem;
+		margin:0;
+		padding:0.4rem 0.5rem;
+	}	
+	.bto{
+		display:flex;
+		flex-direction:column;
+		justify-content:space-around;
+		align-items:center;
+		width:100%;
+	}
+	.btn:before{
+		transform:translate(-15%,-35%);
+	}
+
+/* 	#Home .profile {
+		width:100%;
+		margin:0;
+	}
+	#Home .profile img{
+		background-color:#fff;
+		text-align:center;
+		padding:0.2rem;
+		border-radius:50%;
+		width:15rem;
+		height:15rem;
+		object-fit:cover;
+		box-shadow:0 0 10px 5px #1bf1f0,
+					0 0 15px 5px #03a9fc,
+					0 0 30px 5px #03a9fc,
+					0 0 35px 5px #03a9fc;
+	} */
+	/* About --------------------------------------*/
+	.about-content{
+		/* margin */
+	}
+	.about-content h1{
+		font-size:2rem;
+	}
+	.about-content h1 span{
+		font-size:3rem;
+	}
+	.about-content .wrapper .objective{
+		text-align:left;
+		font-size:1rem;
+		line-height:1.4rem;
+		padding-top:0.6rem 0.3rem;
+	}
+	.about-content .swiper-button-prev{
+		display:none;
+	}
+	.about-content .swiper-button-next{
+		display:none;
+	}
+	.about-content .wrapper .education{
+		margin:0;
+		padding:0;
+	}
+	.about-content .wrapper .education [class^="col1"] h2{
+		font-weight:700;
+		font-size:1.5rem;
+	}
+	.about-content .wrapper .education .col1 h6,.col1 h5,.col1 small{
+		font-size:1.1rem;
+		padding:0;
+		font-weight:300;
+		margin:0;
+	}
+	.about-content .wrapper .certificate{
+		margin:0;
+		padding:0;
+	}
+	.about-content .wrapper .certificate [class^="col2"] h2{
+		font-weight:700;
+	}
+	.about-content .wrapper .certificate .col2 h2,.col2 h6,.col2 h5,.col2 small{
+		font-size:1.5rem;
+		padding:0;
+		font-weight:300;
+		margin:0;
+	}
+	/* SKILLS ----------------------------*/
+	.technical-bars h3{
+		font-size:2rem;
+		text-align:center;
+		padding:3rem 4rem;
+	}
+	/*#Skills .profesional{
+		width:100%;
+		display:flex;
+		flex-direction:column;
+		justify-content:center;
+		align-items:center; 
+	} */
+	#Skills .profesional .row{
+		width:100%;
+		margin:0.5rem;
+		display:flex;
+		/* 	flex-direction:column; */
+		justify-content:space-between;
+		align-items:center;
+		overflow:hidden;
+	}
+	#Skills .profesional .radial-bar{
+		width:100%;
+		padding:0;
+		margin:-15px;
+	}
+	 #Skills .profesional .text{
+		font-size:1.5rem; 
+	 }
+	 #Skills .profesional h3{
+		font-size:2rem;
+		text-align:center;
+		padding:3rem 4rem;
+	}
+	#Skills .profesional .radial-bars{
+		padding:0 5rem;
+	}
+	
+/* --------------------------- PROJECT ------------------------------ */
+	#Project h1{
+	font-size:2.5rem;
+	margin-bottom:1rem;
+}
+#Project h1 .letter{
+	padding-left:0.5rem;
+	font-size:3rem;
+}
+#Project .collections{
+	width:calc(200px*28);
+	height:340px;
+	margin:0;
+	padding:0;
+}
+#Project .collections .site{
+	width:280px;
+	height:80%;
+}
+#Project .collections .site img{
+ 	box-shadow:0 7px 7px rgba(0,0,0,0.5); 
+}
+#Project .collections .site .para p{
+	margin-top:1rem;
+	font-size:0.98rem;
+	line-height:1.8rem;
+}
+/* --------------------------- CONTACT ------------------------------ */
+#Contact{
+	margin-top:11rem;
+}
+#contact-box{
+	/* overflow:none; */
+}
+#contact-box .text-condent{
+	padding:0 3rem 5rem 3rem;
+}
+label{
+	margin:0.5rem 0.5rem;
+}
+textarea{
+	margin-top:0.6rem;
+}
+.link-box .location address{
+	padding-top:0.5rem;
+	font-size:1.3rem;
+	text-align:center;
+}
+.link-box .phone-number h6{
+	font-size:2rem;
+}
+.link-box .add{
+	width:200px;
+}
+.link-box .add .cont{
+	width:70px;
+	height:70px;
+	font-size:3.6rem;
+	padding:1rem;
+	position:relative;
+	top:0;
+}
+.link-box .media{
+	padding:0;
+	margin:0;
+}
+.link-box .media ul li i{
+	font-size:2rem;
+}
+footer{
+	width:100%;
+	padding:1.4rem 2rem;
+	background:var(--footer-bg);
+	color:#fff;
+	text-align:center;
+	display:flex;
+	flex-direction:column;
+}
+.acknowledgement{
+	height:20px;
+	padding:2rem 1.5rem;
+	background:#3fa;
+	color:#000;
+	width:50%;
+	display:none;
+	justify-content:center;
+	align-items:center;
+	clear:both;
+	position:absolute;
+	top:8%;
+	left:50%;
+	border-radius:10px;
+	animation:popup 0.5s linear ;
+	z-index:100;
+}
+} 
