--- a/css/style.css
+++ b/css/style.css
@@ -467,7 +467,7 @@ a{
 	position:absolute;
 	width:100%;
 	height:100%;
-	background-color:trans;
+/* 	background-color:#000; *
 	border:none;
 	border-radius:10px;
 } */
@@ -528,7 +528,7 @@ a{
 .sql span{
 	width:60%;
 }
- #Skills .profesional h3{
+#Skills .profesional h3{
 	padding:0rem 4rem;
 }
 #Skills .profesional .radial-bars{
@@ -931,7 +931,6 @@ footer{
 	position:fixed;
 	bottom:0.1rem;
 	right:1.0rem;
-	z-index:10000;
 }
 .top i{
 	color:var(--primary-color);
@@ -946,7 +945,7 @@ footer{
 
 
 
-
+/*------------------    MEDIA QUERIES    ---------------------------------------*/
 
 
 @media only screen and (max-width:1200px){
@@ -994,7 +993,7 @@ footer{
 	.home-content h1{
 		font-size:1.5rem;
 	}
-	.home-content #Span{
+	.home-content h2 #Span{
 		font-size:1.6rem;
 	}
 	.home-content p{
@@ -1130,8 +1129,7 @@ footer{
 	line-height:1.45rem;
 }
 /* --------------------------- CONTACT no changes ------------------------------ */
-}  
-
+}
 
 @media only screen and (max-width:768px){
 	*{
@@ -1147,8 +1145,8 @@ footer{
 	.home-content h1{
 		font-size:1.5rem;
 	}
-	.home-content #Span{
-		font-size:1.1rem;
+	.home-content h2 #Span{
+		font-size:2.1rem;
 	}
 	.home-content p{
 		font-size:1rem;
@@ -1425,8 +1423,8 @@ footer{
 	.home-content h1{
 		font-size:1.5rem;
 	}
-	#Span{
-		font-size:3.7rem;
+	.home-content h2 #Span{
+		font-size:2.3rem;
 	}
 	.home-content p{
 		font-size:1rem;
@@ -1613,6 +1611,7 @@ footer{
 	z-index:100;
 }
 } 
+
 @media only screen and (max-width:325px){
 	*{
 		font-size:10px;
@@ -1655,23 +1654,27 @@ footer{
 	#Home .home-content{
 		width:100%;
 		padding:3rem 2rem;
-		margin:1.5rem 1rem;
+		margin:2rem 1rem;
 	}
 	.home-content h1{
 		font-size:1.5rem;
 	}
-	#Span{
-		font-size:3.7rem;
+	.home-content h2 #Span{
+		font-size:1.6rem;
+		font-weight:bold;
 	}
 	.home-content p{
-		font-size:1rem;
+		font-size:1.4rem;
+	}
+	.home-soci{
+		margin:2rem;
 	}
 	.home-soci a i{
 		font-size:1.3rem;
-		margin:0;
 		padding:0.4rem 0.5rem;
 	}	
 	.bto{
+		margin-top:2rem;
 		display:flex;
 		flex-direction:column;
 		justify-content:space-around;
